Fix bug UI when text too long

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -32,6 +32,18 @@
   }
 }
 
+.active,
+.file {
+  .text {
+    width: 0;
+  }
+  :hover {
+    .cancel {
+      display: block;
+    }
+  }
+}
+
 .item,
 .medium {
   display: flex;
@@ -51,6 +63,8 @@
       flex: 1;
       text-align: left;
       padding: 0 8px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     svg {
@@ -78,18 +92,7 @@
   }
 }
 
-.active,
-.file {
-  > * {
-    cursor: auto;
-  }
-  :hover {
-    .cancel {
-      display: block;
-      cursor: pointer;
-    }
-  }
-}
+
 
 .small {
   min-height: 40px;
