--- a/src/components/Layouts/components/Details/Details.module.scss
+++ b/src/components/Layouts/components/Details/Details.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-width: 358px;
+  width: 358px;
   height: calc(100vh - 64px);
   background-color: var(--bg-primary-accent);
   padding: 0px 24px;
