--- a/src/components/Layouts/components/Sidebar/SidebarItem/SidebarItem.module.scss
+++ b/src/components/Layouts/components/Sidebar/SidebarItem/SidebarItem.module.scss
@@ -8,15 +8,15 @@
   border-left: 2px solid transparent;
   user-select: none;
 
+  .input-list-name,
   .title {
     flex: 1;
+    width: 0; // Fix Issue 464210: Flex-basis is being ignored when sizing nested flex containers.
     margin: 0px 16px;
   }
 
   .input-list-name {
-    width: 100%;
     height: 24px;
-    margin: 0px 16px;
     border: none;
     outline: none;
     background-color: var(--bg-primary);
