--- a/src/components/TaskItem/TaskItem.module.scss
+++ b/src/components/TaskItem/TaskItem.module.scss
@@ -17,11 +17,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
   padding: 0px 14px;
 }
 
 .task-title {
   font-size: 1.4rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .task-status {
